# Eukariot

./: CMakeLists.txt  Liscense.txt  README.md  install.sh  main.cpp
src/: main.cpp
